fix the overflow bug of header nav when page width equals to 520px

--- a/P000/src/css/main.css
+++ b/P000/src/css/main.css
@@ -1,5 +1,11 @@
 #main {
-  margin-top: 80px;
+  margin-top: 90px;
   background-color: #F6F6F6;
   color: #555;
+}
+
+@media(max-width: 520px) {
+  #main {
+    margin-top: 120px;
+  }
 }
